--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,24 @@
-atomicwrites==1.2.1
-attrs==18.2.0
+atomicwrites==1.2.0
+attrs==18.1.0
+beautifulsoup4==4.6.3
 boto==2.49.0
-boto3==1.8.6
-botocore==1.11.6
+boto3==1.8.4
+botocore==1.11.4
 bz2file==0.98
+cached-property==1.3.0
 certifi==2018.8.24
-chardet==3.0.4
+coverage==4.5.1
 cycler==0.10.0
+Cython==0.28.5
 docutils==0.14
+elasticsearch==2.4.0
+estnltk==1.4.1
 et-xmlfile==1.0.1
 fasttext==0.8.3
 funcy==1.10.3
 future==0.16.0
 gensim==3.5.0
-idna==2.7
+html5lib==1.0.1
 imbalanced-learn==0.3.3
 imblearn==0.0
 jdcal==1.4
@@ -25,7 +30,7 @@ MarkupSafe==1.0
 matplotlib==2.2.3
 mock==2.0.0
 more-itertools==4.3.0
-nltk==3.3
+nltk==3.2.4
 numexpr==2.6.8
 numpy==1.15.1
 openpyxl==2.5.6
@@ -34,16 +39,22 @@ pathlib2==2.3.2
 pbr==4.2.0
 pluggy==0.7.1
 py==1.6.0
+pyahocorasick==1.1.6
 pyLDAvis==2.1.2
 pyparsing==2.2.0
 pytest==3.7.4
+python-crfsuite==0.9.2
 python-dateutil==2.7.3
 pytz==2018.5
-requests==2.19.1
+regex==2015.11.22
+requests==2.13.0
 s3transfer==0.1.13
-scikit-learn==0.19.2
+scikit-learn==0.19.1
 scipy==1.1.0
 six==1.11.0
 sklearn==0.0
-smart-open==1.6.0
+smart-open==1.5.6
+TextClass==0.2
+tornado==5.1
 urllib3==1.23
+webencodings==0.5.1
